@@ -40,6 +40,14 @@
   <url type="homepage">https://nongnu.org/gsequencer</url>
 
   <releases>
+    <release version="4.3.0" date="2022-07-29">
+      <description>
+	<p>
+	  Reverted missing pulseaudio server.
+	</p>
+      </description>
+    </release>
+
     <release version="4.2.14" date="2022-07-24">
       <description>
 	<p>
